# safe-packages

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-testpypi.yml  release.yml  test.yml  zizmor.yml
src/safepackages/: __init__.py
src/safepackages/cli/: main.py  output.py  utils.py
src/safepackages/cli/commands/: batch.py  file.py  scan.py
src/safepackages/core/: client.py  models.py
src/safepackages/core/parsers/: __init__.py  go.py  maven.py  npm.py  nuget.py  php.py  python.py  ruby.py  rust.py
tasks/: tasks.py
tests/: test_cli.py  test_core.py  test_parsers.py
tests/fixtures/: Cargo.toml  Gemfile  batch-input.json  composer.json  go.mod  go.sum  package-lock.json  packages.config  pom.xml  requirements.txt  test.csproj
