[project]
name = "safe-packages"
version = "0.1.0"
description = "The cli tool for checking the security of the packages."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
  { name = "thedevappsecguy" },
]
keywords = ["security", "vulnerability", "scanner", "osv", "dependencies", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "cvss>=3.6",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.urls]
Repository = "https://github.com/thedevappsecguy/safe-packages"
Issues = "https://github.com/thedevappsecguy/safe-packages/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "poethepoet>=0.38.0",
    "pytest",
    "pytest-asyncio",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/safepackages"]
exclude = ["src/safepackages/fixtures"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/tests",
  "/tasks",
]

[project.scripts]
safepackages = "safepackages.cli.main:app"

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
test = "pytest"
e2e = "python tasks/tasks.py e2e"
build = "uv build"
clean = "python tasks/tasks.py clean"
check = ["lint", "test", "e2e", "build"]
